# trading-ai-agent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
api/: __init__.py
api/endpoints/: __init__.py
api/middleware/: __init__.py
automation/: __init__.py
automation/n8n_workflows/: README.md  binance_15min_indicators.json  binance_1day_indicators.json  binance_1hour_indicators.json  binance_4hour_indicators.json  binance_financial_analysis.json  binance_indicators_webhook.json  binance_main_ai_agent.json  binance_price_orderbook_kline.json  crypto_news_sentiment.json
automation/notifications/: __init__.py
automation/schedulers/: __init__.py
core/: __init__.py
core/algorithms/: __init__.py  bollinger_extremes.py  candle_structure.py  ema_rotation.py  micro_levels.py  swing_points.py  technical_strategy.py
core/indicators/: __init__.py
core/systems/: analizer_multi_timeframe.py
core/timeframes/: __init__.py
dashboard/: __init__.py
dashboard/styles/: dashboard.css
data/: __init__.py
data/models/: __init__.py
data/providers/: __init__.py
data/storage/: __init__.py
docker/: Dockerfile.api  docker-compose.yml
docs/: CONTRIBUTING.md  README.md
infrastructure/: __init__.py
infrastructure/config/: __init__.py
infrastructure/mcp_servers/: __init__.py
infrastructure/monitoring/: __init__.py
scripts/: __init__.py
scripts/testing/: __init__.py
tests/: __init__.py
tests/performance/: __init__.py
trading/: __init__.py
trading/backtesting/: __init__.py
trading/execution/: __init__.py
trading/strategies/: __init__.py
